--- a/index.html
+++ b/index.html
@@ -42,28 +42,31 @@
 				<img src="images/img-01.png" alt="IMG">
 			</div>
 
-			<form class="contact1-form validate-form">
+			<form class="contact1-form validate-form" method="POST" action="functions.js" id="formulario">
 				<span class="contact1-form-title">
 					Criptografia de Cesar
 				</span>
 
 				
 				<div class="wrap-input1 validate-input" data-validate = "Message is required">
-					<textarea class="input1" name="message" placeholder="Digite sua Mensagem!"></textarea>
+					<textarea class="input1 campoDigitado cripto descripto" rows="8"
+                            placeholder="Digite sua Mensagem!" required></textarea>
 					<span class="shadow-input1"></span>
 				</div>
+				<input type="number" class="chaveDigitada chave1 chave2" pattern="^@[0-9]$"
+                              placeholder="Digite a Chave" aria-describedby="button-addon2">
 
 				<div class="container-contact1-form-btn">
-					<button class="contact1-form-btn">
+					<button class="contact1-form-btn botaoAcao botaoCri" id="button-addon2" onclick="criptografar()" type="button">
 						Criptografar
 					</button>
-					<button class="contact1-form-btn">
+					<button class="contact1-form-btn" onclick="descriptografar()">
 						Descriptografar
 					</button>
 				</div>
 				<br>
 				<div class="wrap-input1 validate-input" data-validate = "Message is required">
-					<textarea class="input1" name="message" placeholder="Mensagem Descriptografada!" disabled></textarea>
+					<textarea class="input1 result" required="required" rows="4" placeholder="Mensagem Descriptografada!" disabled></textarea>
 					<span class="shadow-input1"></span>
 				</div>
 			</form>
@@ -74,6 +77,7 @@
 
 
 <!--===============================================================================================-->
+	<script src="./js/functionsCifraCesar.js"></script>
 	<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
 <!--===============================================================================================-->
 	<script src="vendor/bootstrap/js/popper.js"></script>
