descriptografia da cifra de cesar

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 					<button class="contact1-form-btn botaoAcao botaoCri" id="button-addon2" onclick="criptografar()" type="button">
 						Criptografar
 					</button>
-					<button class="contact1-form-btn" onclick="descriptografar()">
+					<button class="contact1-form-btn botaoAcao botaoCri" id="button-addon2" onclick="descriptografar()" type="button">
 						Descriptografar
 					</button>
 				</div>
