--- a/index.html
+++ b/index.html
@@ -29,10 +29,9 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-item nav-link active" href="#">Criptografia Simetrica <span class="sr-only">(Página atual)</span></a>
-      <a class="nav-item nav-link" href="#">Destaques</a>
-      <a class="nav-item nav-link" href="#">Preços</a>
-      <a class="nav-item nav-link disabled" href="#">Desativado</a>
+      <a class="nav-item nav-link active" href="#">Criptografia de Cesar<span class="sr-only">(Página atual)</span></a>
+      <a class="nav-item nav-link" href="vigenere.html">Criptografia de Vigenere</a>
+      <a class="nav-item nav-link" href="transposicao.html">Criptografia de Transposicao</a>
     </div>
   </div>
 </nav>
