--- a/vigenere.html
+++ b/vigenere.html
@@ -38,6 +38,9 @@
 	<div class="contact1">
 		<div class="container-contact1">
 			<div class="contact1-pic js-tilt" data-tilt>
+				<span class="contact1-form-title">
+					Criptografe suas mensagens utilizando a criptografia de Vigenere!
+				</span>
 				<img src="images/img-01.png" alt="IMG">
 			</div>
 
@@ -52,7 +55,7 @@
                             placeholder="Digite sua Mensagem!" required></textarea>
 					<span class="shadow-input1"></span>
 				</div>
-				<input type="number" class="chaveDigitada chave1 chave2" pattern="^@[0-9]$"
+				<input type="text" class="chaveDigitada chave1 chave2" pattern="^@[0-9]$"
                               placeholder="Digite a Chave" aria-describedby="button-addon2">
 
 				<div class="container-contact1-form-btn">
