criptografia de vigenere

--- a/transposicao.html
+++ b/transposicao.html
@@ -44,7 +44,7 @@
 				<img src="images/img-01.png" alt="IMG">
 			</div>
 
-			<form class="contact1-form validate-form" method="POST" action="functions.js" id="formulario">
+			<form class="contact1-form validate-form" id="form-vigenere">
 				<span class="contact1-form-title">
 					Criptografia de Transposicao
 				</span>
