--- a/transposicao.html
+++ b/transposicao.html
@@ -59,16 +59,16 @@
                               placeholder="Digite a Chave" aria-describedby="button-addon2">
 
 				<div class="container-contact1-form-btn">
-					<button class="contact1-form-btn botaoAcao botaoCri" id="button-addon2"  type="button">
+					<button class="contact1-form-btn btn_encript botaoAcao" type="button" onclick="transposicaoEncrypt()" name="cifrar" id="btn_encript">
 						Criptografar
 					</button>
-					<button class="contact1-form-btn botaoAcao botaoCri" id="button-addon2"  type="button">
+					<button class="contact1-form-btn botaoAcao2 btn_decript" id="btn_decript" onclick="transposicaoDecrypt"  type="button">
 						Descriptografar
 					</button>
 				</div>
 				<br>
 				<div class="wrap-input1 validate-input" data-validate = "Message is required">
-					<textarea class="input1 result" required="required" rows="4" placeholder="Mensagem Descriptografada!" disabled></textarea>
+					<textarea class="input1 result result2" id="txt_decript" required="required" rows="4" placeholder="Mensagem Descriptografada!" disabled></textarea>
 					<span class="shadow-input1"></span>
 				</div>
 			</form>
@@ -79,7 +79,7 @@
 
 
 <!--===============================================================================================-->
-	<script src="./js/functionsCifraCesar.js"></script>
+	<script src="./js/functionsTransposicao.js"></script>
 	<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
 <!--===============================================================================================-->
 	<script src="vendor/bootstrap/js/popper.js"></script>
