--- a/vigenere.html
+++ b/vigenere.html
@@ -51,25 +51,26 @@
 
 				
 				<div class="wrap-input1 validate-input" data-validate = "Message is required">
-					<textarea class="input1 cripto descripto" id="texto" name="texto" rows="8"
+					<textarea class="input1 cripto campoDigitado descripto" id="texto" name="texto" rows="8"
                             placeholder="Digite sua Mensagem!" required></textarea>
 					<span class="shadow-input1"></span>
 				</div>
-				<input type="text" class="form-control chave2" id="chave" name="chave"
+				<input type="text" class="form-control chaveDigitada chave2" id="chave" name="chave"
                               placeholder="Digite a Chave" aria-describedby="button-addon2">
 
 				<div class="container-contact1-form-btn">
-					<button class="contact1-form-btn botaoCri2" type="button" onclick="vigenere_encrypt()"
+					<button class="contact1-form-btn botaoCri2 botaoAcao" type="button" onclick="vigenere_encrypt()"
                             name="cifrar" id="cifrar">
 						Criptografar
 					</button>
-					<button class="contact1-form-btn botaoAcao botaoCri" id="button-addon2"  type="button">
+					<button class="contact1-form-btn botaoAcao2 botaoCri2" type="button" onclick="vigenere_decrypt()" 
+                           name="decifrar" id="decifrar">
 						Descriptografar
 					</button>
 				</div>
 				<br>
 				<div class="wrap-input1 validate-input" data-validate = "Message is required">
-					<textarea class="input1 result2" id="resultado" name="resultado" rows="4" placeholder="Mensagem Descriptografada!" disabled></textarea>
+					<textarea class="input1 result result2" id="resultado" name="resultado" rows="4" placeholder="Mensagem Descriptografada!" disabled></textarea>
 					<span class="shadow-input1"></span>
 				</div>
 			</form>
